cfParserDemoll/y.output
   0  $accept : c_flat_trans_unit $end

   1  c_flat_trans_unit : external_decl_defn
   2                    | c_flat_trans_unit external_decl_defn

   3  external_decl_defn : function_decl_defn
   4                     | declaration

   5  function_decl_defn : declarator compound_statement
   6                     | declaration_specifiers declarator compound_statement

   7  declaration_list : declaration
   8                   | declaration_list declaration

   9  declaration : declaration_specifiers SEMICOLON
  10              | declaration_specifiers init_declarator_list SEMICOLON

  11  declaration_specifiers : declaration_specifiers storage_class_specifier
  12                         | storage_class_specifier
  13                         | type_specifier
  14                         | declaration_specifiers type_specifier
  15                         | declaration_specifiers type_qualifier
  16                         | type_qualifier

  17  storage_class_specifier : AUTO
  18                          | STATIC
  19                          | EXTERN

  20  type_specifier : INT
  21                 | UNSIGNED
  22                 | LONG
  23                 | FLOAT
  24                 | DOUBLE

  25  type_qualifier : CONST

  26  init_declarator_list : init_declarator
  27                       | init_declarator_list COMMA init_declarator

  28  init_declarator : declarator
  29                  | declarator initializer

  30  initializer : EQ expression

  31  declarator : IDENTIFIER
  32             | declarator LPAREN RPAREN
  33             | declarator LPAREN parameter_type_list RPAREN
  34             | declarator LPAREN formal_parm_list RPAREN
  35             | declarator LBRACKET const_expression RBRACKET
  36             | declarator LBRACKET RBRACKET

  37  formal_parm_list : formal_parameter
  38                   | formal_parm_list COMMA formal_parameter

  39  formal_parameter : type_specifier_list IDENTIFIER

  40  parameter_type_list : type_specifier_list
  41                      | parameter_type_list COMMA type_specifier_list

  42  type_specifier_list : type_specifier
  43                      | type_specifier_list type_specifier

  44  identifier_list : IDENTIFIER
  45                  | identifier_list COMMA IDENTIFIER

  46  statement_list : statement
  47                 | statement_list statement

  48  compound_statement : LBRACE declaration_list statement_list RBRACE
  49                     | LBRACE declaration_list RBRACE
  50                     | LBRACE statement_list RBRACE
  51                     | LBRACE RBRACE

  52  statement : compound_statement
  53            | IF LPAREN expression RPAREN statement
  54            | IF LPAREN expression RPAREN statement ELSE statement
  55            | WHILE LPAREN expression RPAREN statement
  56            | RETURN SEMICOLON
  57            | RETURN expression SEMICOLON
  58            | expression SEMICOLON
  59            | SEMICOLON

  60  expression_list : expression
  61                  | expression_list COMMA expression

  62  const_expression : conditional_expr

  63  expression : conditional_expr
  64             | unary_expr assignment_op expression

  65  assignment_op : EQ
  66                | PLUS_EQ
  67                | MINUS_EQ
  68                | STAR_EQ
  69                | SLASH_EQ

  70  conditional_expr : logical_or_expr

  71  logical_or_expr : logical_and_expr
  72                  | logical_or_expr DBL_BAR logical_and_expr

  73  logical_and_expr : equality_expr
  74                   | logical_and_expr DBL_AMP equality_expr

  75  equality_expr : relational_expr
  76                | equality_expr DBL_EQ relational_expr
  77                | equality_expr EXCL_EQ relational_expr

  78  relational_expr : add_expr
  79                  | relational_expr LESS add_expr
  80                  | relational_expr GTR add_expr
  81                  | relational_expr LESS_EQ add_expr
  82                  | relational_expr GTR_EQ add_expr

  83  add_expr : mult_expr
  84           | add_expr PLUS mult_expr
  85           | add_expr MINUS mult_expr

  86  mult_expr : unary_expr
  87            | mult_expr STAR unary_expr
  88            | mult_expr SLASH unary_expr
  89            | mult_expr PERCENT unary_expr

  90  unary_expr : postfix_expr
  91             | DBL_PLUS unary_expr
  92             | DBL_MINUS unary_expr
  93             | MINUS unary_expr
  94             | PLUS unary_expr
  95             | EXCLAIM unary_expr

  96  postfix_expr : primary_expr
  97               | primary_expr LBRACKET expression RBRACKET
  98               | SCANF LPAREN identifier_list RPAREN
  99               | PRINTF LPAREN expression_list RPAREN
 100               | primary_expr LPAREN expression_list RPAREN
 101               | primary_expr LPAREN RPAREN
 102               | postfix_expr DBL_PLUS
 103               | postfix_expr DBL_MINUS

 104  primary_expr : IDENTIFIER
 105               | INT_LITERAL
 106               | REAL_LITERAL
 107               | STR_LITERAL
 108               | LPAREN expression RPAREN

state 0
	$accept : . c_flat_trans_unit $end  (0)

	AUTO  shift 1
	CONST  shift 2
	DOUBLE  shift 3
	EXTERN  shift 4
	FLOAT  shift 5
	INT  shift 6
	LONG  shift 7
	STATIC  shift 8
	UNSIGNED  shift 9
	IDENTIFIER  shift 10
	.  error

	c_flat_trans_unit  goto 11
	external_decl_defn  goto 12
	function_decl_defn  goto 13
	declaration  goto 14
	declarator  goto 15
	declaration_specifiers  goto 16
	storage_class_specifier  goto 17
	type_specifier  goto 18
	type_qualifier  goto 19


state 1
	storage_class_specifier : AUTO .  (17)

	.  reduce 17


state 2
	type_qualifier : CONST .  (25)

	.  reduce 25


state 3
	type_specifier : DOUBLE .  (24)

	.  reduce 24


state 4
	storage_class_specifier : EXTERN .  (19)

	.  reduce 19


state 5
	type_specifier : FLOAT .  (23)

	.  reduce 23


state 6
	type_specifier : INT .  (20)

	.  reduce 20


state 7
	type_specifier : LONG .  (22)

	.  reduce 22


state 8
	storage_class_specifier : STATIC .  (18)

	.  reduce 18


state 9
	type_specifier : UNSIGNED .  (21)

	.  reduce 21


state 10
	declarator : IDENTIFIER .  (31)

	.  reduce 31


state 11
	$accept : c_flat_trans_unit . $end  (0)
	c_flat_trans_unit : c_flat_trans_unit . external_decl_defn  (2)

	$end  accept
	AUTO  shift 1
	CONST  shift 2
	DOUBLE  shift 3
	EXTERN  shift 4
	FLOAT  shift 5
	INT  shift 6
	LONG  shift 7
	STATIC  shift 8
	UNSIGNED  shift 9
	IDENTIFIER  shift 10
	.  error

	external_decl_defn  goto 20
	function_decl_defn  goto 13
	declaration  goto 14
	declarator  goto 15
	declaration_specifiers  goto 16
	storage_class_specifier  goto 17
	type_specifier  goto 18
	type_qualifier  goto 19


state 12
	c_flat_trans_unit : external_decl_defn .  (1)

	.  reduce 1


state 13
	external_decl_defn : function_decl_defn .  (3)

	.  reduce 3


state 14
	external_decl_defn : declaration .  (4)

	.  reduce 4


state 15
	function_decl_defn : declarator . compound_statement  (5)
	declarator : declarator . LPAREN RPAREN  (32)
	declarator : declarator . LPAREN parameter_type_list RPAREN  (33)
	declarator : declarator . LPAREN formal_parm_list RPAREN  (34)
	declarator : declarator . LBRACKET const_expression RBRACKET  (35)
	declarator : declarator . LBRACKET RBRACKET  (36)

	LPAREN  shift 21
	LBRACKET  shift 22
	LBRACE  shift 23
	.  error

	compound_statement  goto 24


state 16
	function_decl_defn : declaration_specifiers . declarator compound_statement  (6)
	declaration : declaration_specifiers . SEMICOLON  (9)
	declaration : declaration_specifiers . init_declarator_list SEMICOLON  (10)
	declaration_specifiers : declaration_specifiers . storage_class_specifier  (11)
	declaration_specifiers : declaration_specifiers . type_specifier  (14)
	declaration_specifiers : declaration_specifiers . type_qualifier  (15)

	AUTO  shift 1
	CONST  shift 2
	DOUBLE  shift 3
	EXTERN  shift 4
	FLOAT  shift 5
	INT  shift 6
	LONG  shift 7
	STATIC  shift 8
	UNSIGNED  shift 9
	IDENTIFIER  shift 10
	SEMICOLON  shift 25
	.  error

	declarator  goto 26
	init_declarator_list  goto 27
	storage_class_specifier  goto 28
	type_specifier  goto 29
	type_qualifier  goto 30
	init_declarator  goto 31


state 17
	declaration_specifiers : storage_class_specifier .  (12)

	.  reduce 12


state 18
	declaration_specifiers : type_specifier .  (13)

	.  reduce 13


state 19
	declaration_specifiers : type_qualifier .  (16)

	.  reduce 16


state 20
	c_flat_trans_unit : c_flat_trans_unit external_decl_defn .  (2)

	.  reduce 2


state 21
	declarator : declarator LPAREN . RPAREN  (32)
	declarator : declarator LPAREN . parameter_type_list RPAREN  (33)
	declarator : declarator LPAREN . formal_parm_list RPAREN  (34)

	DOUBLE  shift 3
	FLOAT  shift 5
	INT  shift 6
	LONG  shift 7
	UNSIGNED  shift 9
	RPAREN  shift 32
	.  error

	type_specifier  goto 33
	parameter_type_list  goto 34
	formal_parm_list  goto 35
	formal_parameter  goto 36
	type_specifier_list  goto 37


state 22
	declarator : declarator LBRACKET . const_expression RBRACKET  (35)
	declarator : declarator LBRACKET . RBRACKET  (36)

	PRINTF  shift 38
	SCANF  shift 39
	IDENTIFIER  shift 40
	INT_LITERAL  shift 41
	REAL_LITERAL  shift 42
	STR_LITERAL  shift 43
	LPAREN  shift 44
	RBRACKET  shift 45
	PLUS  shift 46
	MINUS  shift 47
	EXCLAIM  shift 48
	DBL_PLUS  shift 49
	DBL_MINUS  shift 50
	.  error

	const_expression  goto 51
	conditional_expr  goto 52
	unary_expr  goto 53
	logical_or_expr  goto 54
	logical_and_expr  goto 55
	equality_expr  goto 56
	relational_expr  goto 57
	add_expr  goto 58
	mult_expr  goto 59
	postfix_expr  goto 60
	primary_expr  goto 61


state 23
	compound_statement : LBRACE . declaration_list statement_list RBRACE  (48)
	compound_statement : LBRACE . declaration_list RBRACE  (49)
	compound_statement : LBRACE . statement_list RBRACE  (50)
	compound_statement : LBRACE . RBRACE  (51)

	AUTO  shift 1
	CONST  shift 2
	DOUBLE  shift 3
	EXTERN  shift 4
	FLOAT  shift 5
	IF  shift 62
	INT  shift 6
	LONG  shift 7
	PRINTF  shift 38
	RETURN  shift 63
	SCANF  shift 39
	STATIC  shift 8
	UNSIGNED  shift 9
	WHILE  shift 64
	IDENTIFIER  shift 40
	INT_LITERAL  shift 41
	REAL_LITERAL  shift 42
	STR_LITERAL  shift 43
	LPAREN  shift 44
	LBRACE  shift 23
	RBRACE  shift 65
	SEMICOLON  shift 66
	PLUS  shift 46
	MINUS  shift 47
	EXCLAIM  shift 48
	DBL_PLUS  shift 49
	DBL_MINUS  shift 50
	.  error

	declaration  goto 67
	compound_statement  goto 68
	declaration_specifiers  goto 69
	declaration_list  goto 70
	storage_class_specifier  goto 17
	type_specifier  goto 18
	type_qualifier  goto 19
	expression  goto 71
	statement_list  goto 72
	statement  goto 73
	conditional_expr  goto 74
	unary_expr  goto 75
	logical_or_expr  goto 54
	logical_and_expr  goto 55
	equality_expr  goto 56
	relational_expr  goto 57
	add_expr  goto 58
	mult_expr  goto 59
	postfix_expr  goto 60
	primary_expr  goto 61


state 24
	function_decl_defn : declarator compound_statement .  (5)

	.  reduce 5


state 25
	declaration : declaration_specifiers SEMICOLON .  (9)

	.  reduce 9


state 26
	function_decl_defn : declaration_specifiers declarator . compound_statement  (6)
	init_declarator : declarator .  (28)
	init_declarator : declarator . initializer  (29)
	declarator : declarator . LPAREN RPAREN  (32)
	declarator : declarator . LPAREN parameter_type_list RPAREN  (33)
	declarator : declarator . LPAREN formal_parm_list RPAREN  (34)
	declarator : declarator . LBRACKET const_expression RBRACKET  (35)
	declarator : declarator . LBRACKET RBRACKET  (36)

	LPAREN  shift 21
	LBRACKET  shift 22
	LBRACE  shift 23
	EQ  shift 76
	SEMICOLON  reduce 28
	COMMA  reduce 28

	compound_statement  goto 77
	initializer  goto 78


state 27
	declaration : declaration_specifiers init_declarator_list . SEMICOLON  (10)
	init_declarator_list : init_declarator_list . COMMA init_declarator  (27)

	SEMICOLON  shift 79
	COMMA  shift 80
	.  error


state 28
	declaration_specifiers : declaration_specifiers storage_class_specifier .  (11)

	.  reduce 11


state 29
	declaration_specifiers : declaration_specifiers type_specifier .  (14)

	.  reduce 14


state 30
	declaration_specifiers : declaration_specifiers type_qualifier .  (15)

	.  reduce 15


state 31
	init_declarator_list : init_declarator .  (26)

	.  reduce 26


state 32
	declarator : declarator LPAREN RPAREN .  (32)

	.  reduce 32


state 33
	type_specifier_list : type_specifier .  (42)

	.  reduce 42


state 34
	declarator : declarator LPAREN parameter_type_list . RPAREN  (33)
	parameter_type_list : parameter_type_list . COMMA type_specifier_list  (41)

	RPAREN  shift 81
	COMMA  shift 82
	.  error


state 35
	declarator : declarator LPAREN formal_parm_list . RPAREN  (34)
	formal_parm_list : formal_parm_list . COMMA formal_parameter  (38)

	RPAREN  shift 83
	COMMA  shift 84
	.  error


state 36
	formal_parm_list : formal_parameter .  (37)

	.  reduce 37


state 37
	formal_parameter : type_specifier_list . IDENTIFIER  (39)
	parameter_type_list : type_specifier_list .  (40)
	type_specifier_list : type_specifier_list . type_specifier  (43)

	DOUBLE  shift 3
	FLOAT  shift 5
	INT  shift 6
	LONG  shift 7
	UNSIGNED  shift 9
	IDENTIFIER  shift 85
	RPAREN  reduce 40
	COMMA  reduce 40

	type_specifier  goto 86


state 38
	postfix_expr : PRINTF . LPAREN expression_list RPAREN  (99)

	LPAREN  shift 87
	.  error


state 39
	postfix_expr : SCANF . LPAREN identifier_list RPAREN  (98)

	LPAREN  shift 88
	.  error


state 40
	primary_expr : IDENTIFIER .  (104)

	.  reduce 104


state 41
	primary_expr : INT_LITERAL .  (105)

	.  reduce 105


state 42
	primary_expr : REAL_LITERAL .  (106)

	.  reduce 106


state 43
	primary_expr : STR_LITERAL .  (107)

	.  reduce 107


state 44
	primary_expr : LPAREN . expression RPAREN  (108)

	PRINTF  shift 38
	SCANF  shift 39
	IDENTIFIER  shift 40
	INT_LITERAL  shift 41
	REAL_LITERAL  shift 42
	STR_LITERAL  shift 43
	LPAREN  shift 44
	PLUS  shift 46
	MINUS  shift 47
	EXCLAIM  shift 48
	DBL_PLUS  shift 49
	DBL_MINUS  shift 50
	.  error

	expression  goto 89
	conditional_expr  goto 74
	unary_expr  goto 75
	logical_or_expr  goto 54
	logical_and_expr  goto 55
	equality_expr  goto 56
	relational_expr  goto 57
	add_expr  goto 58
	mult_expr  goto 59
	postfix_expr  goto 60
	primary_expr  goto 61


state 45
	declarator : declarator LBRACKET RBRACKET .  (36)

	.  reduce 36


state 46
	unary_expr : PLUS . unary_expr  (94)

	PRINTF  shift 38
	SCANF  shift 39
	IDENTIFIER  shift 40
	INT_LITERAL  shift 41
	REAL_LITERAL  shift 42
	STR_LITERAL  shift 43
	LPAREN  shift 44
	PLUS  shift 46
	MINUS  shift 47
	EXCLAIM  shift 48
	DBL_PLUS  shift 49
	DBL_MINUS  shift 50
	.  error

	unary_expr  goto 90
	postfix_expr  goto 60
	primary_expr  goto 61


state 47
	unary_expr : MINUS . unary_expr  (93)

	PRINTF  shift 38
	SCANF  shift 39
	IDENTIFIER  shift 40
	INT_LITERAL  shift 41
	REAL_LITERAL  shift 42
	STR_LITERAL  shift 43
	LPAREN  shift 44
	PLUS  shift 46
	MINUS  shift 47
	EXCLAIM  shift 48
	DBL_PLUS  shift 49
	DBL_MINUS  shift 50
	.  error

	unary_expr  goto 91
	postfix_expr  goto 60
	primary_expr  goto 61


state 48
	unary_expr : EXCLAIM . unary_expr  (95)

	PRINTF  shift 38
	SCANF  shift 39
	IDENTIFIER  shift 40
	INT_LITERAL  shift 41
	REAL_LITERAL  shift 42
	STR_LITERAL  shift 43
	LPAREN  shift 44
	PLUS  shift 46
	MINUS  shift 47
	EXCLAIM  shift 48
	DBL_PLUS  shift 49
	DBL_MINUS  shift 50
	.  error

	unary_expr  goto 92
	postfix_expr  goto 60
	primary_expr  goto 61


state 49
	unary_expr : DBL_PLUS . unary_expr  (91)

	PRINTF  shift 38
	SCANF  shift 39
	IDENTIFIER  shift 40
	INT_LITERAL  shift 41
	REAL_LITERAL  shift 42
	STR_LITERAL  shift 43
	LPAREN  shift 44
	PLUS  shift 46
	MINUS  shift 47
	EXCLAIM  shift 48
	DBL_PLUS  shift 49
	DBL_MINUS  shift 50
	.  error

	unary_expr  goto 93
	postfix_expr  goto 60
	primary_expr  goto 61


state 50
	unary_expr : DBL_MINUS . unary_expr  (92)

	PRINTF  shift 38
	SCANF  shift 39
	IDENTIFIER  shift 40
	INT_LITERAL  shift 41
	REAL_LITERAL  shift 42
	STR_LITERAL  shift 43
	LPAREN  shift 44
	PLUS  shift 46
	MINUS  shift 47
	EXCLAIM  shift 48
	DBL_PLUS  shift 49
	DBL_MINUS  shift 50
	.  error

	unary_expr  goto 94
	postfix_expr  goto 60
	primary_expr  goto 61


state 51
	declarator : declarator LBRACKET const_expression . RBRACKET  (35)

	RBRACKET  shift 95
	.  error


state 52
	const_expression : conditional_expr .  (62)

	.  reduce 62


state 53
	mult_expr : unary_expr .  (86)

	.  reduce 86


state 54
	conditional_expr : logical_or_expr .  (70)
	logical_or_expr : logical_or_expr . DBL_BAR logical_and_expr  (72)

	DBL_BAR  shift 96
	RPAREN  reduce 70
	RBRACKET  reduce 70
	SEMICOLON  reduce 70
	COMMA  reduce 70


state 55
	logical_or_expr : logical_and_expr .  (71)
	logical_and_expr : logical_and_expr . DBL_AMP equality_expr  (74)

	DBL_AMP  shift 97
	RPAREN  reduce 71
	RBRACKET  reduce 71
	SEMICOLON  reduce 71
	COMMA  reduce 71
	DBL_BAR  reduce 71


state 56
	logical_and_expr : equality_expr .  (73)
	equality_expr : equality_expr . DBL_EQ relational_expr  (76)
	equality_expr : equality_expr . EXCL_EQ relational_expr  (77)

	DBL_EQ  shift 98
	EXCL_EQ  shift 99
	RPAREN  reduce 73
	RBRACKET  reduce 73
	SEMICOLON  reduce 73
	COMMA  reduce 73
	DBL_AMP  reduce 73
	DBL_BAR  reduce 73


state 57
	equality_expr : relational_expr .  (75)
	relational_expr : relational_expr . LESS add_expr  (79)
	relational_expr : relational_expr . GTR add_expr  (80)
	relational_expr : relational_expr . LESS_EQ add_expr  (81)
	relational_expr : relational_expr . GTR_EQ add_expr  (82)

	LESS  shift 100
	LESS_EQ  shift 101
	GTR  shift 102
	GTR_EQ  shift 103
	RPAREN  reduce 75
	RBRACKET  reduce 75
	SEMICOLON  reduce 75
	COMMA  reduce 75
	DBL_AMP  reduce 75
	DBL_BAR  reduce 75
	DBL_EQ  reduce 75
	EXCL_EQ  reduce 75


state 58
	relational_expr : add_expr .  (78)
	add_expr : add_expr . PLUS mult_expr  (84)
	add_expr : add_expr . MINUS mult_expr  (85)

	PLUS  shift 104
	MINUS  shift 105
	RPAREN  reduce 78
	RBRACKET  reduce 78
	SEMICOLON  reduce 78
	COMMA  reduce 78
	DBL_AMP  reduce 78
	DBL_BAR  reduce 78
	DBL_EQ  reduce 78
	EXCL_EQ  reduce 78
	LESS  reduce 78
	LESS_EQ  reduce 78
	GTR  reduce 78
	GTR_EQ  reduce 78


state 59
	add_expr : mult_expr .  (83)
	mult_expr : mult_expr . STAR unary_expr  (87)
	mult_expr : mult_expr . SLASH unary_expr  (88)
	mult_expr : mult_expr . PERCENT unary_expr  (89)

	STAR  shift 106
	SLASH  shift 107
	PERCENT  shift 108
	RPAREN  reduce 83
	RBRACKET  reduce 83
	SEMICOLON  reduce 83
	COMMA  reduce 83
	PLUS  reduce 83
	MINUS  reduce 83
	DBL_AMP  reduce 83
	DBL_BAR  reduce 83
	DBL_EQ  reduce 83
	EXCL_EQ  reduce 83
	LESS  reduce 83
	LESS_EQ  reduce 83
	GTR  reduce 83
	GTR_EQ  reduce 83


state 60
	unary_expr : postfix_expr .  (90)
	postfix_expr : postfix_expr . DBL_PLUS  (102)
	postfix_expr : postfix_expr . DBL_MINUS  (103)

	DBL_PLUS  shift 109
	DBL_MINUS  shift 110
	RPAREN  reduce 90
	RBRACKET  reduce 90
	SEMICOLON  reduce 90
	COMMA  reduce 90
	PLUS  reduce 90
	MINUS  reduce 90
	STAR  reduce 90
	SLASH  reduce 90
	PERCENT  reduce 90
	DBL_AMP  reduce 90
	DBL_BAR  reduce 90
	DBL_EQ  reduce 90
	EXCL_EQ  reduce 90
	LESS  reduce 90
	LESS_EQ  reduce 90
	GTR  reduce 90
	GTR_EQ  reduce 90
	EQ  reduce 90
	PLUS_EQ  reduce 90
	MINUS_EQ  reduce 90
	STAR_EQ  reduce 90
	SLASH_EQ  reduce 90


state 61
	postfix_expr : primary_expr .  (96)
	postfix_expr : primary_expr . LBRACKET expression RBRACKET  (97)
	postfix_expr : primary_expr . LPAREN expression_list RPAREN  (100)
	postfix_expr : primary_expr . LPAREN RPAREN  (101)

	LPAREN  shift 111
	LBRACKET  shift 112
	RPAREN  reduce 96
	RBRACKET  reduce 96
	SEMICOLON  reduce 96
	COMMA  reduce 96
	PLUS  reduce 96
	MINUS  reduce 96
	STAR  reduce 96
	SLASH  reduce 96
	PERCENT  reduce 96
	DBL_PLUS  reduce 96
	DBL_MINUS  reduce 96
	DBL_AMP  reduce 96
	DBL_BAR  reduce 96
	DBL_EQ  reduce 96
	EXCL_EQ  reduce 96
	LESS  reduce 96
	LESS_EQ  reduce 96
	GTR  reduce 96
	GTR_EQ  reduce 96
	EQ  reduce 96
	PLUS_EQ  reduce 96
	MINUS_EQ  reduce 96
	STAR_EQ  reduce 96
	SLASH_EQ  reduce 96


state 62
	statement : IF . LPAREN expression RPAREN statement  (53)
	statement : IF . LPAREN expression RPAREN statement ELSE statement  (54)

	LPAREN  shift 113
	.  error


state 63
	statement : RETURN . SEMICOLON  (56)
	statement : RETURN . expression SEMICOLON  (57)

	PRINTF  shift 38
	SCANF  shift 39
	IDENTIFIER  shift 40
	INT_LITERAL  shift 41
	REAL_LITERAL  shift 42
	STR_LITERAL  shift 43
	LPAREN  shift 44
	SEMICOLON  shift 114
	PLUS  shift 46
	MINUS  shift 47
	EXCLAIM  shift 48
	DBL_PLUS  shift 49
	DBL_MINUS  shift 50
	.  error

	expression  goto 115
	conditional_expr  goto 74
	unary_expr  goto 75
	logical_or_expr  goto 54
	logical_and_expr  goto 55
	equality_expr  goto 56
	relational_expr  goto 57
	add_expr  goto 58
	mult_expr  goto 59
	postfix_expr  goto 60
	primary_expr  goto 61


state 64
	statement : WHILE . LPAREN expression RPAREN statement  (55)

	LPAREN  shift 116
	.  error


state 65
	compound_statement : LBRACE RBRACE .  (51)

	.  reduce 51


state 66
	statement : SEMICOLON .  (59)

	.  reduce 59


state 67
	declaration_list : declaration .  (7)

	.  reduce 7


state 68
	statement : compound_statement .  (52)

	.  reduce 52


state 69
	declaration : declaration_specifiers . SEMICOLON  (9)
	declaration : declaration_specifiers . init_declarator_list SEMICOLON  (10)
	declaration_specifiers : declaration_specifiers . storage_class_specifier  (11)
	declaration_specifiers : declaration_specifiers . type_specifier  (14)
	declaration_specifiers : declaration_specifiers . type_qualifier  (15)

	AUTO  shift 1
	CONST  shift 2
	DOUBLE  shift 3
	EXTERN  shift 4
	FLOAT  shift 5
	INT  shift 6
	LONG  shift 7
	STATIC  shift 8
	UNSIGNED  shift 9
	IDENTIFIER  shift 10
	SEMICOLON  shift 25
	.  error

	declarator  goto 117
	init_declarator_list  goto 27
	storage_class_specifier  goto 28
	type_specifier  goto 29
	type_qualifier  goto 30
	init_declarator  goto 31


state 70
	declaration_list : declaration_list . declaration  (8)
	compound_statement : LBRACE declaration_list . statement_list RBRACE  (48)
	compound_statement : LBRACE declaration_list . RBRACE  (49)

	AUTO  shift 1
	CONST  shift 2
	DOUBLE  shift 3
	EXTERN  shift 4
	FLOAT  shift 5
	IF  shift 62
	INT  shift 6
	LONG  shift 7
	PRINTF  shift 38
	RETURN  shift 63
	SCANF  shift 39
	STATIC  shift 8
	UNSIGNED  shift 9
	WHILE  shift 64
	IDENTIFIER  shift 40
	INT_LITERAL  shift 41
	REAL_LITERAL  shift 42
	STR_LITERAL  shift 43
	LPAREN  shift 44
	LBRACE  shift 23
	RBRACE  shift 118
	SEMICOLON  shift 66
	PLUS  shift 46
	MINUS  shift 47
	EXCLAIM  shift 48
	DBL_PLUS  shift 49
	DBL_MINUS  shift 50
	.  error
